styling_mobile_layout

--- a/index.html
+++ b/index.html
@@ -30,17 +30,21 @@
         </nav>
 
         <div class="burger_menu">
-          <div class="burger"></div>
-          <div class="burger"></div>
-          <div class="burger"></div>
+          <div class="burger_1"></div>
+          <div class="burger_2"></div>
+          <div class="burger_3"></div>
         </div>
       </section>
+    </header>
 
+    <main>
       <section class="section_hero">
-        <img src="./src/img/hero_trainer_mobil.png" alt="Trainerin vor grünem Hintergrund" />
+        <div class="div_hero_image">
+          <img src="./src/img/hero_trainer_mobil.png" alt="Trainerin vor grünem Hintergrund" />
+        </div>
 
         <div class="wrapper_hero_sidetext">
-          <div class="div_costumers">
+          <div class="div_customers">
             <div class="wrapper_costumers_img">
               <img src="./src/img/happy_costumer1.png" alt="Glückliche Kundin in Pink" />
               <img src="./src/img/happy_costumer2.png" alt="Glücklich Kundin in hellem Grün" />
@@ -66,9 +70,7 @@
           </div>
         </div>
       </section>
-    </header>
 
-    <main>
       <section class="section_features">
         <div class="div_einleitung">
           <h2>Features</h2>
