responsive_styling_tablet_header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/css/mobile.css" />
+    <link rel="stylesheet" href="/src/css/tablet.css" />
+    <link rel="stylesheet" href="/src/css/desktop.css" />
     <title>Frontend Health App</title>
   </head>
   <body>
@@ -17,22 +19,24 @@
       <section class="section_navbar">
         <a href="./index.html"><img src="./src/img/logo_nutritionist_mobil.svg" alt="Nutrionist Logo" /> </a>
 
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Process</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
+        <div class="wrapper_navbar">
+          <nav>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Process</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
 
-        <div class="burger_menu">
-          <div class="burger_1"></div>
-          <div class="burger_2"></div>
-          <div class="burger_3"></div>
+          <div class="burger_menu">
+            <div class="burger_1"></div>
+            <div class="burger_2"></div>
+            <div class="burger_3"></div>
+          </div>
         </div>
       </section>
     </header>
