responsive_styling_tablet_topbar

--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
   <body>
     <header>
       <section class="section_topbar" id="top">
-        <img src="./src/img/icon_green_join.svg" alt="Join Icon" />
-        <p>Join Our Personalized Nutrition Demo For Free</p>
-        <img src="./src/img/icon_arrow_white_right.svg" alt="Weißer Pfeil nach rechts" />
+        <div class="wrapper_abstract_lines">
+          <img src="/src/img/bg_abstract_left.svg" alt="Striche nach links" />
+        </div>
+
+        <div class="wrapper_jointext">
+          <img src="./src/img/icon_green_join.svg" alt="Join Icon" />
+          <p>Join Our Personalized Nutrition Demo For Free</p>
+          <img src="./src/img/icon_arrow_white_right.svg" alt="Weißer Pfeil nach rechts" />
+        </div>
+
+        <div class="wrapper_abstract_lines">
+          <img src="/src/img/bg_abstract_right.svg" alt="Striche nach rechts" />
+        </div>
       </section>
 
       <section class="section_navbar">
